feat: scaffold auth module
